More dark mode fixes

--- a/src/assets/css/dark-mode.styl
+++ b/src/assets/css/dark-mode.styl
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark)
     body
-        background-color #111
+        background-color #000
 
     h1, h1 a, h2, h3
         color #eee
@@ -9,23 +9,15 @@
         color #ccc
 
     a
-        color green
+        color yellow
 
     ul
         color #ccc
-
-    .logo
-        color #eee
     
     .footer
-        border-color #555
-
         a
-            color #ccc
+            color yellow
         
-    .posts-post
-        border-color #555
-
     code
         background-color codeDark
         color #ddd
